<resources>


    <string name="app_name">MyNotepad</string>
    <!-- Popular -->
    <string name="update">Update</string>
    <string name="update_element">Update element</string>

    <!-- Bottom Navigation Menu -->
    <string name="icon_name_settings">Settings</string>
    <string name="icon_name_notes">Note</string>
    <string name="icon_name_list">Shopping list</string>
    <string name="icon_name_add">Add</string>

    <!-- Action Bar Menu & Note Redactor Activity -->
    <string name="text_action_menu_icon_save">Save</string>
    <string name="text_action_menu_icon_bold">Bold</string>
    <string name="text_action_menu_icon_picker">Color Picker</string>
    <string name="text_hint_title">Title</string>
    <string name="text_hint_content">Description</string>

    <!-- Action Bar Menu & Element Activity -->
    <string name="text_hint_action_menu">Name</string>
    <string name="delete_list">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="save_list">Save list</string>
    <string name="new_list">New list</string>

    <!-- Dialog Create -->
    <string name="text_dialog_create_heading">Name List</string>
    <string name="text_hint_dialog_create_">Title</string>
    <string name="button_text_create_variant">Create</string>


    <!-- Shopping List fragment -->
    <string name="item_text_delete">Delete</string>
    <string name="item_text_edit">Edit</string>

    <!-- Setting Preference Screen -->
    <string name="preference_category_general">General settings</string>
    <string name="list_preference_note_title">Style note</string>
    <string name="list_preference_time_title">Time format</string>
    <string name="list_preference_premium">Activate premium</string>
    <string name="list_preference_premium_summary">No ads materials</string>
    <string name="preference_category_theme">Theme settings</string>
    <string name="color_theme">Colors</string>
    <string name="preference_category_text_size">Text size settings</string>
    <string name="list_preference_text_size_title">Note title text size</string>
    <string name="list_preference_text_size_description">Note description text size</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>