<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/icon_name_settings"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/note"
        android:title="@string/icon_name_notes"
        android:icon="@drawable/ic_note"
        app:showAsAction="ifRoom"


        />

    <item
        android:id="@+id/shopping_list"
        android:title="@string/icon_name_list"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom"

        />

    <item
        android:id="@+id/add_item"
        android:icon="@drawable/ic_add"
        android:title="@string/icon_name_add"

        app:showAsAction="ifRoom" />

</menu>